@@ -1,5 +1,6 @@
 package org.apache.maven.artifact.versioning;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 /*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
@@ -18,7 +19,6 @@ package org.apache.maven.artifact.versioning;
  * specific language governing permissions and limitations
  * under the License.
  */
-
 import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.nio.file.FileVisitResult;
@@ -28,66 +28,49 @@ import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.regex.Pattern;
-
 import org.junit.jupiter.api.Test;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-public class ComparableVersionIT
-{
+public class ComparableVersionIT {
 
     @Test
     public void test()
-        throws Exception
-    {
-        Files.walkFileTree( Paths.get( "target" ), new SimpleFileVisitor<Path>()
-        {
-            Pattern mavenArtifactJar = Pattern.compile( "maven-artifact-[\\d.]+(-SNAPSHOT)?\\.jar" );
+            throws Exception {
+        Files.walkFileTree(Paths.get("target"), new SimpleFileVisitor<Path>() {
+            Pattern mavenArtifactJar = Pattern.compile("maven-artifact-[\\d.]+(-SNAPSHOT)?\\.jar");
 
             @Override
-            public FileVisitResult visitFile( Path file, BasicFileAttributes attrs )
-                throws IOException
-            {
+            public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
+                    throws IOException {
                 String filename = file.getFileName().toString();
-                if ( mavenArtifactJar.matcher( filename ).matches() )
-                {
-                    Process p = Runtime.getRuntime().exec( new String[] {
-                        Paths.get( System.getProperty( "java.home" ), "bin/java" ).toString(),
-                        "-jar",
-                        file.toAbsolutePath().toString(),
-                        "5.32",
-                        "5.27" } );
+                if (mavenArtifactJar.matcher(filename).matches()) {
+                    Process p = Runtime.getRuntime().exec(new String[] {
+                            Paths.get(System.getProperty("java.home"), "bin/java").toString(),
+                            "-jar",
+                            file.toAbsolutePath().toString(),
+                            "5.32",
+                            "5.27" });
 
-                    try
-                    {
-                        assertEquals( 0, p.waitFor(), "Unexpected exit code" );
-                    }
-                    catch ( InterruptedException e )
-                    {
-                        throw new InterruptedIOException( e.toString() );
+                    try {
+                        assertEquals(0, p.waitFor(), "Unexpected exit code");
+                    } catch (InterruptedException e) {
+                        throw new InterruptedIOException(e.toString());
                     }
                     return FileVisitResult.TERMINATE;
-                }
-                else
-                {
+                } else {
                     return FileVisitResult.CONTINUE;
                 }
             }
 
             @Override
-            public FileVisitResult preVisitDirectory( Path dir, BasicFileAttributes attrs )
-                throws IOException
-            {
-                if ( Paths.get( "target" ).equals( dir ) )
-                {
+            public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs)
+                    throws IOException {
+                if (Paths.get("target").equals(dir)) {
                     return FileVisitResult.CONTINUE;
-                }
-                else
-                {
+                } else {
                     return FileVisitResult.SKIP_SUBTREE;
                 }
             }
-        } );
+        });
     }
 
 }
